--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,38 @@ Cargo.lock
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+
 #.idea/
+# Editor specific files
+.vscode/
+.idea/
+*.swp
+*~
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+
+# Temp files
+*.tmp
+*.temp
+*.bak
+*.old
+
+# Byebug
+.byebug_history
+
+# dotenv environment variables file
+.env
+
+# Cargo build artifacts
+Cargo.lock
+
+# Rust documentation
+target/doc/
+
+# Rust test result files
+*.profdata
